Bug 453715 - Can't create shortcut for Show Sidebars
Summary: Can't create shortcut for Show Sidebars
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.04.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-12 17:52 UTC by Nicolas Vaughan
Modified: 2024-08-05 15:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Vaughan 2022-05-12 17:52:39 UTC
SUMMARY

When I try to create a keyboard shortcut for "Show Sidebars", and I restart Kate, the keyboard has been erased.

STEPS TO REPRODUCE
1. Go to Settings > Configure Keyboard Shortcuts
2. Look for "Show Sidebars"
3. Add a new shortcut (or replace existing: Ctrl. Shift Alt F).
4. Test shortcut: it works.
5. Restart KDE.
6. Test shortcut: it does not work anymore.
7. Repeat steps 1-2: the shortcut no longer exists.

OBSERVED RESULT
The new shortcut no longer works nor exists.

EXPECTED RESULT
The new shortcut should remain.

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 36
KDE Plasma Version: 5.24.5
KDE Frameworks Version: 5.93.0
Qt Version: 5.15.3
Kernel Version: 5.17.6-300.fc36.x86_64 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-9700 CPU @ 3.00GHz
Memory: 30.7 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 630
Comment 1 Christoph Cullmann 2022-08-23 19:48:51 UTC
Can reproduce that unfortunately.
Comment 2 Bug Janitor Service 2024-08-02 11:42:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1553
Comment 3 Christoph Cullmann 2024-08-03 15:49:04 UTC
Git commit 2b6d541850a9deb960ca94d1c065c96748149b68 by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 03/08/2024 at 15:45.
Pushed by cullmann into branch 'master'.

Fix Show sidebar shortcut not being restored properly

We can't read actionCollection settings in the ctor as they will get
overwritten by createShellGUI called in KateMainWindow. So do it after
the client is added

M  +4    -2    apps/lib/katemdi.cpp

https://invent.kde.org/utilities/kate/-/commit/2b6d541850a9deb960ca94d1c065c96748149b68
Comment 4 Waqar Ahmed 2024-08-05 15:45:03 UTC
Git commit 3c4d46d9f3c5f40c30ade5480965c8cc5462f095 by Waqar Ahmed.
Committed on 05/08/2024 at 15:44.
Pushed by waqar into branch 'release/24.08'.

Fix Show sidebar shortcut not being restored properly

We can't read actionCollection settings in the ctor as they will get
overwritten by createShellGUI called in KateMainWindow. So do it after
the client is added
(cherry picked from commit 2b6d541850a9deb960ca94d1c065c96748149b68)

M  +4    -2    apps/lib/katemdi.cpp

https://invent.kde.org/utilities/kate/-/commit/3c4d46d9f3c5f40c30ade5480965c8cc5462f095