Fix Show sidebar shortcut not being restored properly

We can't read actionCollection settings in the ctor as they will get
overwritten by createShellGUI called in KateMainWindow. So do it after
the client is added

BUG: 453715
(cherry picked from commit 2b6d541850a9deb960ca94d1c065c96748149b68)